--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
     "bootstrap": "^5.1.3",
+    "clsx": "^1.1.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-image-hotspots": "^1.7.1",
@@ -23,7 +24,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "netlify deploy"
+    "deploy": "npm run build && netlify deploy --dir=build"
   },
   "eslintConfig": {
     "extends": [
